name:                hoobuddy
version:             0.1.0.0
synopsis:            Tool for building hoogle data
description:         Tool for building hoogle data
license:             MIT
license-file:        LICENSE
author:              tobias pflug
maintainer:          tobias.pflug@gmail.com
category:            System
build-type:          Simple
cabal-version:       >=1.10

executable hoobuddy
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -fwarn-incomplete-patterns
  build-depends:       base >=4.7 && <4.8
                     , Cabal
                     , directory
                     , filepath
                     , monad-loops
                     , aeson
                     , yaml
                     , hoogle >= 4.2.34
                     , process


  default-language:    Haskell2010
